UnLockingTask and UpdateTask inner classes writed to normal class.

--- a/PE-HAQUAPP/app/src/main/res/layout/activity_show_work.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_show_work.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/workName"
+            android:inputType="text"
             app:layout_constraintTop_toBottomOf="@+id/mainToolBar"
             android:hint="@string/name"
             android:textAlignment="center"
@@ -44,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/city"
+            android:inputType="text"
             app:layout_constraintTop_toBottomOf="@+id/workName"
             android:hint="@string/city"
             android:textAlignment="center"
