Work create done!

--- a/PE-HAQUAPP/app/src/main/res/layout/activity_joblist.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_joblist.xml
@@ -63,6 +63,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:src="@drawable/baseline_add_24"
+            android:onClick="openCreateActivity"
             android:backgroundTint="@color/company"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"/>
