--- a/PE-HAQUAPP/app/src/main/res/layout/activity_joblist.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_joblist.xml
@@ -15,26 +15,53 @@
         android:id="@+id/main">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/mainToolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/mainToolBar"
-            android:elevation="4dp"
             android:background="@color/company"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:layout_constraintTop_toTopOf="parent"
             app:titleTextColor="@color/white"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp">
+            tools:layout_editor_absoluteX="140dp">
 
-            <SearchView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/search_view_bg"
-                android:backgroundTint="@color/search"
-                android:queryHint="Keresés"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="60dp"/>
+                android:layout_height="wrap_content">
+                <SearchView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/addressSearch"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/search_view_bg"
+                    android:backgroundTint="@color/search"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/filterButton"
+                    android:queryHint="Település, Cím" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/filterButton"
+                    android:src="@drawable/filter"
+                    android:backgroundTint="@color/search"
+                    app:layout_constraintEnd_toStartOf="@id/settingButton"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginEnd="10dp"
+                    android:contentDescription="@string/filterByDate"/>
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/settingButton"
+                    android:layout_marginEnd="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:backgroundTint="@color/search"
+                    android:contentDescription="@string/settings"
+                    android:src="@drawable/settings" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.Toolbar>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,7 +93,8 @@
             android:onClick="openCreateActivity"
             android:backgroundTint="@color/company"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:contentDescription="@string/createWork"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
