--- a/PE-HAQUAPP/app/src/main/res/layout/job_list.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/job_list.xml
@@ -11,14 +11,16 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".controller.Joblist_Activity">
+        tools:context=".controller.Joblist_Activity"
+        android:background="@color/background">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/workName"
             android:text="Name"
             app:layout_constraintTop_toTopOf="parent"
-            android:textSize="50sp"/>
+            android:textSize="50sp"
+            android:textColor="@color/text" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,7 +28,8 @@
             app:layout_constraintTop_toBottomOf="@+id/workName"
             android:textSize="30sp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/text"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,6 +37,7 @@
             app:layout_constraintTop_toBottomOf="@id/datumContent"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:textSize="30sp"/>
+            android:textSize="30sp"
+            android:textColor="@color/text"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
