--- a/PE-HAQUAPP/app/src/main/res/layout/activity_show_work.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_show_work.xml
@@ -144,6 +144,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/saveButton"
             android:text="@string/save"
             android:textSize="25sp"
             android:textColor="@color/white"
@@ -153,5 +154,18 @@
             android:backgroundTint="@color/company"
             android:layout_marginStart="40dp"
             android:layout_marginTop="15dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete"
+            android:textSize="25sp"
+            app:layout_constraintTop_toBottomOf="@+id/error"
+            app:layout_constraintStart_toEndOf="@+id/saveButton"
+            android:backgroundTint="@color/company"
+            android:textColor="@color/white"
+            android:onClick="delete"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
