Network checking is exported to an external class. And date filtering is done.

--- a/PE-HAQUAPP/app/src/main/res/layout/activity_joblist.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_joblist.xml
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/filterButton"
                     android:src="@drawable/filter"
+                    android:onClick="filterByDate"
                     android:backgroundTint="@color/search"
                     app:layout_constraintEnd_toStartOf="@id/settingButton"
                     app:layout_constraintTop_toTopOf="parent"
