--- a/PE-HAQUAPP/app/src/main/res/layout/activity_create_work.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_create_work.xml
@@ -40,6 +40,7 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:textColor="@color/text"
+            android:textColorHint="@color/text"
             android:layout_marginTop="10dp"/>
         <EditText
             android:layout_width="match_parent"
@@ -51,6 +52,7 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:textColor="@color/text"
+            android:textColorHint="@color/text"
             android:layout_marginTop="5dp"/>
         <EditText
             android:layout_width="match_parent"
@@ -62,6 +64,7 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:textColor="@color/text"
+            android:textColorHint="@color/text"
             android:layout_marginTop="5dp"/>
         <EditText
             android:layout_width="match_parent"
@@ -73,6 +76,7 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:textColor="@color/text"
+            android:textColorHint="@color/text"
             android:layout_marginTop="5dp"/>
         <ImageButton
             android:layout_width="wrap_content"
@@ -94,6 +98,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:textSize="25sp"
             android:textColor="@color/text"
+            android:textColorHint="@color/text"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"/>
         <ImageButton
