--- a/PE-HAQUAPP/app/src/main/res/menu/nav_menu.xml
+++ b/PE-HAQUAPP/app/src/main/res/menu/nav_menu.xml
@@ -8,11 +8,11 @@
         <item android:id="@+id/nav_home"
             android:title="@string/main_page"/>
         <item android:id="@+id/nav_befejezett"
-            android:title="@string/finished_own_works"/>
-        <item android:id="@+id/nav_all_folyamatban"
-            android:title="@string/continous_all_work"/>
-        <item android:id="@+id/nav_all_finished"
-            android:title="@string/all_finished_work"/>
+            android:title="@string/finished_works"/>
+        <item android:id="@+id/nav_unfinished"
+            android:title="@string/unfinished_works"/>
+        <item android:id="@+id/nav_future"
+            android:title="@string/future_works"/>
     </group>
 
     <item android:title="">
