--- a/PE-HAQUAPP/app/src/main/res/layout/activity_main.xml
+++ b/PE-HAQUAPP/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:inputType="textEmailAddress"
             android:textAlignment="center"
             android:textColor="@color/input"
+            android:textColorHint="@color/input"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -54,6 +55,7 @@
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@+id/email"
             android:textColor="@color/input"
+            android:textColorHint="@color/input"
             android:layout_marginTop="15dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
